Bug 96420 - [BlackBerry] about:memory should use malloc_stats instead of mallinfo
Summary: [BlackBerry] about:memory should use malloc_stats instead of mallinfo
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit BlackBerry (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on: 116954
Blocks:
  Show dependency treegraph
 
Reported: 2012-09-11 13:54 PDT by Yong Li
Modified: 2013-05-29 11:43 PDT (History)
5 users (show)

See Also:


Attachments
the patch (deleted)
2012-09-11 14:39 PDT, Yong Li
no flags Details | Formatted Diff | Diff
the patch (5.80 KB, patch)
2012-09-11 14:41 PDT, Yong Li
no flags Details | Formatted Diff | Diff
Updated patch (2.66 KB, patch)
2013-05-29 05:10 PDT, Carlos Garcia Campos
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Yong Li 2012-09-11 13:54:58 PDT
.
Comment 1 Yong Li 2012-09-11 14:39:25 PDT
Created attachment 163443 [details]
the patch
Comment 2 Yong Li 2012-09-11 14:41:29 PDT
Created attachment 163444 [details]
the patch
Comment 3 Rob Buis 2012-09-11 14:45:59 PDT
Comment on attachment 163444 [details]
the patch

LGTM.
Comment 4 Yong Li 2012-09-11 14:53:20 PDT
Comment on attachment 163444 [details]
the patch

Thanks Rob!

Clearing the flag now and we'll land the patch when it is suitable time.
Comment 5 Yong Li 2013-02-11 13:06:33 PST
this is already there
Comment 6 Yong Li 2013-02-11 13:06:51 PST
closing
Comment 7 Yong Li 2013-02-11 13:07:57 PST
oops. mistake
Comment 8 Carlos Garcia Campos 2013-05-29 05:10:11 PDT
Created attachment 203186 [details]
Updated patch
Comment 9 Rob Buis 2013-05-29 10:30:08 PDT
Comment on attachment 203186 [details]
Updated patch

Looks good.
Comment 10 WebKit Commit Bot 2013-05-29 11:43:46 PDT
Comment on attachment 203186 [details]
Updated patch

Clearing flags on attachment: 203186

Committed r150915: <http://trac.webkit.org/changeset/150915>
Comment 11 WebKit Commit Bot 2013-05-29 11:43:48 PDT
All reviewed patches have been landed.  Closing bug.