[BlackBerry] about:memory should use malloc_stats instead of mallinfo https://bugs.webkit.org/show_bug.cgi?id=96420

Reviewed by Rob Buis.

PR 206297
Use mallopt to get malloc_stats.

* WebKitSupport/AboutData.cpp:
(BlackBerry::WebKit::mallocStats):
(BlackBerry::WebKit::memoryPage):
(BlackBerry::WebKit::MemoryTracker::updateMemoryPeaks):


Canonical link: https://commits.webkit.org/135250@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150915 268f45cc-cd09-0410-ab3c-d52691b4dbfc